test/extern/ferguson/extern-record-proc-other-init.good
extern-record-proc-other-init.chpl:24: In function 'testMystruct':
extern-record-proc-other-init.chpl:26: error: unresolved call 'R.init()'
extern-record-proc-other-init.chpl:3: note: this candidate did not match: R.init(arg: int(64))
extern-record-proc-other-init.chpl:26: note: because call does not supply enough arguments
extern-record-proc-other-init.chpl:3: note: it is missing a value for formal 'arg: int(64)'
